[tool.poetry]
name = "anvil"
version = "0.1.0"
description = "Adaptable tools to make reinforcement learning algorithms"
authors = ["Rohan Tangri <rohan.tangri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.2"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
