[tool.poetry]
name = "anvil_rl"
version = "0.1.0"
description = "Adaptable tools to make reinforcement learning algorithms"
authors = ["Rohan Tangri <rohan.tangri@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
torch = "^1.9.0"
numpy = "^1.20.3"
gym = "^0.19.0"
psutil = "^5.8.0"
tensorboard = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.2"
pre-commit = "^2.13.0"
pytest-cov = "2.12.1"
coverage = {extras = ["toml"], version = "^5.5"}

[tool.pytest.ini_options]
addopts = """
    --verbose
    --junitxml build/reports/unittest.xml
    -p no:warnings
    -m 'not integration'
    --tb=short -rEf
    --cov anvil_rl
    --cov-report xml:build/reports/coverage.xml
    --cov-report term
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
